refactor: improve Docker setup with secure apt sources, optimized LocalStack persistence, and simplified Poetry config
- **[api not started for tests]**
  - Issue: `./quick-start.sh test` failed with “service 'api' is not running”.
  - Change: Start [api](cci:7://file:///Users/nathaniellarson/repos/personal/larsonathaniel/kinexus-ai/docker/Dockerfile.api:0:0-0:0) with deps in [run_tests()](cci:1://file:///Users/nathaniellarson/repos/personal/larsonathaniel/kinexus-ai/quick-start.sh:221:0-268:1) in [quick-start.sh](cci:7://file:///Users/nathaniellarson/repos/personal/larsonathaniel/kinexus-ai/quick-start.sh:0:0-0:0).
    - File: [quick-start.sh](cci:7://file:///Users/nathaniellarson/repos/personal/larsonathaniel/kinexus-ai/quick-start.sh:0:0-0:0) (run_tests now does `docker-compose up -d postgres redis api`)

- **[apt proxy/mirror failures in Docker builds]**
  - Issue: HTTP proxy interception caused apt errors during image builds.
  - Changes: Switch Debian sources to HTTPS, handle deb822 sources, add apt retries and `--no-install-recommends`.
    - Files: [docker/Dockerfile.api](cci:7://file:///Users/nathaniellarson/repos/personal/larsonathaniel/kinexus-ai/docker/Dockerfile.api:0:0-0:0), [docker/Dockerfile.agent-base](cci:7://file:///Users/nathaniellarson/repos/personal/larsonathaniel/kinexus-ai/docker/Dockerfile.agent-base:0:0-0:0)

- **[poetry flag incompatibility]**
  - Issue: Poetry 2.x error “The option '--no-dev' does not exist”.
  - Changes: Remove `--no-dev` and use `--without dev` for prod.
    - Files: [docker/Dockerfile.api](cci:7://file:///Users/nathaniellarson/repos/personal/larsonathaniel/kinexus-ai/docker/Dockerfile.api:0:0-0:0) (use `poetry install --no-root`)
            [docker/Dockerfile.api.prod](cci:7://file:///Users/nathaniellarson/repos/personal/larsonathaniel/kinexus-ai/docker/Dockerfile.api.prod:0:0-0:0) (`poetry install --without dev`)

- **[compose warning + localstack mount crash]**
  - Issues:
    - Obsolete `version:` header warning.
 

--- a/docker/Dockerfile.api.prod
+++ b/docker/Dockerfile.api.prod
@@ -57,7 +57,7 @@ COPY --chown=kinexus:kinexus pyproject.toml poetry.lock ./
 RUN pip install poetry==2.2.1
 
 # Install only production dependencies
-RUN poetry install --no-dev --no-interaction --no-ansi && \
+RUN poetry install --without dev --no-interaction --no-ansi && \
     rm -rf $POETRY_CACHE_DIR
 
 # Copy application code
