--- a/docker/Dockerfile.api
+++ b/docker/Dockerfile.api
@@ -7,11 +7,18 @@ ENV PYTHONUNBUFFERED=1 \
     PIP_NO_CACHE_DIR=1 \
     PIP_DISABLE_PIP_VERSION_CHECK=1 \
     POETRY_NO_INTERACTION=1 \
-    POETRY_VENV_IN_PROJECT=1 \
-    POETRY_CACHE_DIR=/tmp/poetry_cache
+    POETRY_VIRTUALENVS_IN_PROJECT=true \
+    POETRY_CACHE_DIR=/tmp/poetry_cache \
+    PATH="/app/.venv/bin:$PATH" \
+    PYTHONPATH=/app/src
 
 # Install system dependencies
-RUN apt-get update && apt-get install -y \
+RUN if [ -f /etc/apt/sources.list.d/debian.sources ]; then \
+        sed -i 's|http://deb.debian.org|https://deb.debian.org|g' /etc/apt/sources.list.d/debian.sources; \
+    elif [ -f /etc/apt/sources.list ]; then \
+        sed -i 's|http://deb.debian.org|https://deb.debian.org|g' /etc/apt/sources.list; \
+    fi && \
+    apt-get -o Acquire::Retries=5 update && apt-get install -y --no-install-recommends \
     build-essential \
     curl \
     libpq-dev \
@@ -27,8 +34,8 @@ WORKDIR /app
 # Copy Poetry configuration files
 COPY pyproject.toml poetry.lock* ./
 
-# Install Python dependencies
-RUN poetry install --no-dev --no-root && rm -rf $POETRY_CACHE_DIR
+# Install Python dependencies (exclude dev by default in Poetry 2.x)
+RUN poetry install --no-root && rm -rf $POETRY_CACHE_DIR
 
 # Copy application code
 COPY src/ ./src/
@@ -45,5 +52,5 @@ HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
 # Expose port
 EXPOSE 8000
 
-# Run the application
-CMD ["poetry", "run", "uvicorn", "src.api.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+# Run the application directly from the venv
+CMD ["uvicorn", "src.api.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
