--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ constructs = "^10.0.0"
 
 # API & Web Framework
 fastapi = "0.104.1"
-uvicorn = {extras = ["standard"], version = "0.24.0"}
+uvicorn = "0.24.0"
 pydantic = {extras = ["email"], version = "2.5.0"}
 pydantic-settings = "2.1.0"
 httpx = "0.25.2"
@@ -28,6 +28,7 @@ python-jose = {extras = ["cryptography"], version = "3.3.0"}
 passlib = {extras = ["bcrypt"], version = "1.7.4"}
 python-multipart = "0.0.6"
 websockets = "12.0"
+watchfiles = "0.21.0"
 
 # AI/ML
 anthropic = "0.7.1"
