--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -156,7 +156,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          poetry install --with dev,test
+          poetry install --with dev
 
       - name: Run linting
         run: |
