--- a/requirements-lambda.txt
+++ b/requirements-lambda.txt
@@ -1,14 +1,11 @@
-# Lambda-specific requirements (lighter versions)
-boto3==1.28.57
-botocore==1.31.57
-fastapi==0.104.1
-pydantic==2.4.2
-httpx==0.25.0
-anthropic==0.7.1
-python-jose[cryptography]==3.3.0
-sqlalchemy==2.0.23
-psycopg2-binary==2.9.9
-redis==5.0.1
-python-dotenv==1.0.0
-structlog==23.2.0
-tenacity==8.2.3
+# Minimal Lambda runtime dependencies (only what's imported in src/lambdas/*)
+# Keep this list small to stay under the 250MB unzipped limit.
+
+# Logging
+structlog>=23,<24
+
+# AWS SDK (provides botocore as a dependency)
+boto3>=1.28,<2
+
+# HTTP client (used by v2 handlers)
+httpx>=0.25,<1
