--- a/requirements-lambda.txt
+++ b/requirements-lambda.txt
@@ -9,3 +9,17 @@ boto3>=1.28,<2
 
 # HTTP client (used by v2 handlers)
 httpx>=0.25,<1
+
+# Utilities
+python-dateutil>=2.8,<3
+tenacity>=8.2,<9
+typing-extensions>=4.8,<5
+
+# AI/ML for Bedrock calls
+anthropic>=0.7,<1
+
+# Validation (if used by handlers)
+pydantic>=2.5,<3
+
+# Fast JSON handling
+orjson>=3.9,<4
